--- a/GW2Radial/GW2Radial.vcxproj.filters
+++ b/GW2Radial/GW2Radial.vcxproj.filters
@@ -100,6 +100,11 @@
     <ClCompile Include="src\MiscTab.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="MouseSquare.cpp" />
+    <ClCompile Include="src\SkllsONE.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="BossTime.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="imgui\imgui_internal.h">
@@ -204,6 +209,11 @@
     <ClInclude Include="include\MiscTab.h">
       <Filter>Source Files</Filter>
     </ClInclude>
+    <ClInclude Include="MouseSquare.h" />
+    <ClInclude Include="src\SkllsONE.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="BossTime.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="rt_rcdat.bin">
@@ -212,6 +222,7 @@
     <None Include="Main.def">
       <Filter>Resource Files</Filter>
     </None>
+    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Resource.rc">
