--- a/GW2Radial/GW2Radial.vcxproj.filters
+++ b/GW2Radial/GW2Radial.vcxproj.filters
@@ -242,4 +242,9 @@
       <Filter>Resource Files</Filter>
     </CopyFileToFolders>
   </ItemGroup>
+  <ItemGroup>
+    <Image Include="Radvisual-Holographic-Web-browser.ico">
+      <Filter>Resource Files</Filter>
+    </Image>
+  </ItemGroup>
 </Project>
