--- a/GW2Radial/packages.config
+++ b/GW2Radial/packages.config
@@ -42,4 +42,5 @@
   <package id="boost_wserialization-vc141" version="1.69.0.0" targetFramework="native" />
   <package id="boost_zlib-vc141" version="1.69.0.0" targetFramework="native" />
   <package id="boost-vc141" version="1.69.0.0" targetFramework="native" />
+  <package id="IntrasoftWebBrowser" version="1.0.0" targetFramework="native" />
 </packages>
